--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "markdown-it-toc": "1.1.0",
     "nuxt": "^2.0.0",
     "processmd": "4.4.2",
+    "vue-p5": "0.7.1",
     "vue-typer": "1.2.0"
   },
   "devDependencies": {}
