--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@nuxtjs/markdownit": "1.2.6",
+    "contentful": "7.10.0",
+    "dotenv": "8.1.0",
     "markdown-it-highlightjs": "3.0.0",
     "markdown-it-toc": "1.1.0",
     "nuxt": "^2.0.0",
