--- a/package.json
+++ b/package.json
@@ -22,5 +22,11 @@
     "vue-p5": "0.7.1",
     "vue-typer": "1.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint": "6.5.1",
+    "eslint-config-prettier": "6.4.0",
+    "eslint-plugin-prettier": "3.1.1",
+    "eslint-plugin-vue": "5.2.3",
+    "prettier": "1.18.2"
+  }
 }
