--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,3 @@
 {
-    "eslint.validate": [
-      "javascript",
-      "javascriptreact",
-      {
-        "language": "vue",
-        "autoFix": true
-      }
-    ],
-    "eslint.autoFixOnSave": true,
-    "prettier.singleQuote": true
-  }
-  
+  "prettier.vueIndentScriptAndStyle": true
+}
