--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "nuxt build",
     "analyze": "nuxt build --analyze",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/markdownit": "1.2.6",
@@ -23,10 +25,12 @@
     "vue-typer": "1.2.0"
   },
   "devDependencies": {
-    "eslint": "6.5.1",
-    "eslint-config-prettier": "6.4.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-vue": "5.2.3",
-    "prettier": "1.18.2"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-vue": "^6.2.1",
+    "prettier": "^1.19.1",
+    "vue-eslint-parser": "^7.0.0"
   }
 }
