--- a/.env-example
+++ b/.env-example
@@ -1,4 +1,4 @@
-CF_BLOG_POST_TYPE_ID=
-CF_BLOG_TAG_TYPE_ID=
-CF_CDA_ACCESS_TOKEN=
-CF_SPACE_ID=
+BASE_URL=http://localhost:3000
+MCRO_CMS=
+ARTICLE_URL=
+TAG_URL=
