--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
   },
   "dependencies": {
     "@nuxtjs/markdownit": "1.2.6",
-    "contentful": "7.10.0",
-    "dotenv": "8.1.0",
     "markdown-it-highlightjs": "3.0.0",
     "markdown-it-toc": "1.1.0",
     "nuxt": "^2.0.0",
@@ -25,6 +23,8 @@
     "vue-typer": "1.2.0"
   },
   "devDependencies": {
+    "@nuxtjs/axios": "^5.11.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
