--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "nuxt build",
     "analyze": "nuxt build --analyze",
     "start": "nuxt start",
+    "export": "nuxt export",
     "generate": "nuxt generate",
+    "generate:static": "yarn build && yarn export",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
@@ -17,7 +19,7 @@
     "@nuxtjs/markdownit": "1.2.6",
     "markdown-it-highlightjs": "3.0.0",
     "markdown-it-toc": "1.1.0",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.13.3",
     "vue-infinite-loading": "2.4.4"
   },
   "devDependencies": {
