--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxtjs/markdownit": "1.2.6",
-    "markdown-it-highlightjs": "3.0.0",
-    "markdown-it-toc": "1.1.0",
+    "highlight.js": "^10.1.1",
+    "marked": "^1.1.0",
     "nuxt": "^2.13.3",
     "vue-infinite-loading": "2.4.4"
   },
