--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.1",
+    "firebase-tools": "^8.7.0",
     "prettier": "^1.19.1",
     "storybook-addon-vue-info": "^1.4.2",
     "vue-eslint-parser": "^7.0.0"
