--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,4 @@
 {
-  "parser": "vue-eslint-parser",
   "parserOptions": {
     "parser": "babel-eslint",
     "sourceType": "module"
@@ -14,19 +13,17 @@
     "vue"
   ],
   "env": {
+    "jest": true,
     "browser": true,
     "es6": true,
     "node": true
   },
   "globals": {},
   "rules": {
-    "camelcase": [
-      2,
-      {
-        "properties": "always"
-      }
-    ],
-    "vue/no-v-html": 0,
+    "camelcase": [2,{"properties": "always"}],
+    "quotes": [2,"single", { "avoidEscape": true } ],
+    "eqeqeq": [2, "always", {"null": "ignore"}],
+    "prefer-const": 2,
     "vue/component-name-in-template-casing": "off"
   }
 }
