--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "highlight.js": "^10.1.1",
     "marked": "^1.1.0",
+    "normalize.css": "^8.0.1",
     "nuxt": "^2.13.3",
     "vue-infinite-loading": "2.4.4"
   },
