--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.1.1",
     "marked": "^1.1.0",
     "normalize.css": "^8.0.1",
