--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "export": "nuxt export",
     "generate": "nuxt generate",
     "generate:static": "yarn build && yarn export",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
-    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint-js": "eslint --ext .js,.vue .",
+    "lint-style": "stylelint \"**/*.vue\" \"**/*.css\"",
+    "lint-js:fix": "eslint --ext .js,.vue . --fix",
+    "lint-style:fix": "stylelint \"**/*.vue\" \"**/*.css\" --fix",
+    "lint:check": "yarn lint-js & yarn lint-style",
+    "lint:fix": "yarn lint-js && yarn lint-style",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -48,6 +52,10 @@
     "firebase-tools": "^8.7.0",
     "prettier": "^1.19.1",
     "storybook-addon-vue-info": "^1.4.2",
+    "stylelint": "^13.7.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-prettier": "^1.1.2",
     "vue-eslint-parser": "^7.0.0"
   }
 }
