fix: google analytics追加、workflow見直し

--- a/.env-example
+++ b/.env-example
@@ -3,3 +3,10 @@ MICRO_CMS=
 ARTICLE_URL=
 TAG_URL=
 CATEGORY_URL=
+FIREBASE_TOKEN=
+
+FIREBASE_API_KEY=
+FIREBASE_AUTH_DOMAIN=
+FIREBASE_PROJECT_ID=
+FIREBASE_APP_ID=
+FIREBASE_MEASUREMENT_ID=
