--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: firebase deploy
 
 on:
+  repository_dispatch:
+    types: [update_post]
   push:
     branches:
       - master
@@ -38,6 +40,9 @@ jobs:
     #  with:
     #    github-token: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: create .env file
+      run: echo "${{ secrets.ENV_FIREBASE }}" > .env
+
     - name: build
       env:
         BASE_URL: ${{ secrets.BASE_URL }}
@@ -48,8 +53,6 @@ jobs:
       run: yarn generate:static
 
     - name: deploy to Firebase Hosting
-      uses: w9jds/firebase-action@master
-      with:
-        args: deploy
+      run: yarn firebase deploy --token $FIREBASE_TOKEN
       env:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
