--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "firebase": "^7.24.0",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.1.1",
     "marked": "^1.1.0",
