--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-js:fix": "eslint --ext .js,.vue . --fix",
     "lint-style:fix": "stylelint \"**/*.vue\" \"**/*.css\" --fix",
     "lint:check": "yarn lint-js & yarn lint-style",
-    "lint:fix": "yarn lint-js && yarn lint-style",
+    "lint:fix": "yarn lint-js:fix && yarn lint-style:fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
