update: デプロイに関する項目を変更

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "taka1156-nuxt-blogsite"
+  },
+  "targets": {
+    "taka1156-nuxt-blogsite": {
+      "hosting": {
+        "production": [
+          "taka1156-nuxt-blogsite"
+        ]
+      }
+    }
   }
 }
