add: atmos、moleculesのarticleまでstorybook設定

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "lint-style:fix": "stylelint \"**/*.vue\" \"**/*.css\" --fix",
     "lint:check": "yarn lint-js & yarn lint-style",
     "lint:fix": "yarn lint-js:fix && yarn lint-style:fix",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook": "start-storybook -p 6006 --no-dll",
+    "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
     "firebase": "^7.24.0",
@@ -33,29 +33,35 @@
     "@babel/core": "^7.11.1",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/dotenv": "^1.4.1",
-    "@storybook/addon-actions": "^5.3.19",
-    "@storybook/addon-backgrounds": "^5.3.19",
-    "@storybook/addon-knobs": "^5.3.19",
-    "@storybook/addon-links": "^5.3.19",
-    "@storybook/addon-viewport": "^5.3.19",
-    "@storybook/addons": "^5.3.19",
-    "@storybook/cli": "^5.3.19",
-    "@storybook/vue": "^5.3.19",
+    "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-backgrounds": "^6.0.28",
+    "@storybook/addon-essentials": "^6.0.28",
+    "@storybook/addon-knobs": "^6.0.28",
+    "@storybook/addon-links": "^6.0.28",
+    "@storybook/addon-viewport": "^6.0.28",
+    "@storybook/addons": "^6.0.28",
+    "@storybook/cli": "^6.0.28",
+    "@storybook/vue": "^6.0.28",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-preset-vue": "^2.0.2",
-    "core-js": "^2.6.11",
+    "core-js": "^3.6.5",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.1",
     "firebase-tools": "^8.7.0",
     "prettier": "^1.19.1",
+    "react-is": "^17.0.1",
     "storybook-addon-vue-info": "^1.4.2",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
     "vue-eslint-parser": "^7.0.0"
+  },
+  "resolutions": {
+    "react": "16.13.0",
+    "react-dom": "16.13.0"
   }
 }
