--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "prettier": "^1.19.1",
     "react-is": "^17.0.1",
     "storybook-addon-vue-info": "^1.4.2",
+    "storybook-vue-router": "^1.0.7",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
