fix: プロジェクト名とREADME.mdの修正

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "takablog",
+  "name": "nuxt-blog",
   "version": "1.0.0",
   "description": "My wondrous Nuxt.js project",
   "author": "taka",
