--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "highlight.js": "^10.1.1",
     "marked": "^1.1.0",
     "normalize.css": "^8.0.1",
-    "nuxt": "^2.13.3"
+    "nuxt": "^2.13.3",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
