--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended"],
+  "extends": ["stylelint-config-standard", "stylelint-prettier/recommended", "stylelint-config-recess-order"],
   "rules": {
     "color-no-invalid-hex": true,
     "color-hex-case": "lower",
