--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "storybook-vue-router": "^1.0.7",
     "stylelint": "^13.7.0",
     "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
     "vue-eslint-parser": "^7.0.0"
