--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0",
     "firebase": "^7.24.0",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.4.1",
