--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "marked": "^1.1.0",
     "normalize.css": "^8.0.1",
     "nuxt": "^2.13.3",
+    "vue-lazyload": "^1.3.3",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
