--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lint-style:fix": "stylelint \"**/*.vue\" \"**/*.css\" --fix",
     "lint:check": "yarn lint-js & yarn lint-style",
     "lint:fix": "yarn lint-js:fix && yarn lint-style:fix",
+    "test": "jest",
+    "test:cov": "jest --coverage",
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
@@ -45,7 +47,9 @@
     "@storybook/addons": "^6.0.28",
     "@storybook/cli": "^6.0.28",
     "@storybook/vue": "^6.0.28",
+    "@vue/test-utils": "^1.1.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
     "babel-loader": "^8.1.0",
     "babel-preset-vue": "^2.0.2",
     "core-js": "^3.6.5",
@@ -54,6 +58,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-vue": "^6.2.1",
     "firebase-tools": "^8.7.0",
+    "jest": "^26.6.3",
     "prettier": "^1.19.1",
     "react-is": "^17.0.1",
     "storybook-addon-vue-info": "^1.4.2",
@@ -63,7 +68,8 @@
     "stylelint-config-recess-order": "^2.3.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-prettier": "^1.1.2",
-    "vue-eslint-parser": "^7.0.0"
+    "vue-eslint-parser": "^7.0.0",
+    "vue-jest": "^3.0.7"
   },
   "resolutions": {
     "react": "16.13.0",
