fix: github actionsにtimezone設定

--- a/.github/workflows/sub.yml
+++ b/.github/workflows/sub.yml
@@ -36,6 +36,8 @@ jobs:
       run: yarn lint:check
 
     - name: test
+      env:
+        TZ: 'Asia/Tokyo'
       run: yarn test
 
     - name: create .env file
