--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       run: yarn install
 
     - name: test
+      env:
+        TZ: 'Asia/Tokyo'
       run: yarn test:cov
 
     - uses: coverallsapp/github-action@master
