fix: timezoneの指定方法修正

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,9 +34,7 @@ jobs:
       run: yarn install
 
     - name: test
-      env:
-        TZ: 'Asia/Tokyo'
-      run: yarn test:cov
+      run: TZ=Asia/Tokyo yarn test:cov
 
     - uses: coverallsapp/github-action@master
       with:
