--- a/.github/workflows/sub.yml
+++ b/.github/workflows/sub.yml
@@ -36,9 +36,7 @@ jobs:
       run: yarn lint:check
 
     - name: test
-      env:
-        TZ: 'Asia/Tokyo'
-      run: yarn test
+      run: TZ=Asia/Tokyo yarn test
 
     - name: create .env file
       run: echo "${{ secrets.ENV_FIREBASE }}" > .env
