Revert "fix: timezoneの指定方法修正"
This reverts commit 2eeecbe8908121aed4f914a4c603fcff01bc94ca.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,9 @@ jobs:
       run: yarn install
 
     - name: test
-      run: TZ=Asia/Tokyo yarn test:cov
+      env:
+        TZ: 'Asia/Tokyo'
+      run: yarn test:cov
 
     - uses: coverallsapp/github-action@master
       with:
