--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
+    "dayjs": "^1.10.3",
     "firebase": "^7.24.0",
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.4.1",
