--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
+    "@nuxtjs/sentry": "^5.0.2",
     "@nuxtjs/sitemap": "2.4.0",
     "dayjs": "1.10.4",
     "firebase": "8.2.10",
