fix: linter関連の修正 Close #221

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,8 +6,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:vue/recommended",
-    "plugin:prettier/recommended",
-    "prettier/vue"
+    "prettier"
   ],
   "plugins": [
     "vue"
