--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint-style": "stylelint \"**/*.vue\" \"**/*.css\"",
     "lint-js:fix": "eslint --ext .js,.vue . --fix",
     "lint-style:fix": "stylelint \"**/*.vue\" \"**/*.css\" --fix",
+    "format": "yarn prettier --write \"**/*.{js, vue}\"",
     "lint:check": "yarn lint-js & yarn lint-style",
-    "lint:fix": "yarn lint-js:fix && yarn lint-style:fix",
+    "lint:fix": "yarn lint-js:fix && yarn lint-style:fix && yarn format",
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
@@ -53,7 +54,6 @@
     "core-js": "3.9.1",
     "eslint": "7.21.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-prettier": "3.3.1",
     "eslint-plugin-vue": "7.7.0",
     "firebase-tools": "9.5.0",
     "jest": "26.6.3",
@@ -65,7 +65,6 @@
     "stylelint-config-prettier": "8.0.2",
     "stylelint-config-recess-order": "2.3.0",
     "stylelint-config-standard": "21.0.0",
-    "stylelint-prettier": "1.2.0",
     "vue-eslint-parser": "7.6.0",
     "vue-jest": "3.0.7"
   },
