--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "highlight.js": "10.7.2",
     "marked": "2.0.2",
     "normalize.css": "8.0.1",
-    "nuxt": "2.15.3",
+    "nuxt": "2.15.4",
     "vue-lazyload": "1.3.3",
     "vue-scrollto": "2.20.0"
   },
   "devDependencies": {
     "@babel/core": "7.11.1",
+    "@babel/preset-env": "^7.13.15",
     "@nuxtjs/axios": "5.13.1",
     "@nuxtjs/dotenv": "1.4.1",
     "@storybook/addon-actions": "6.2.7",
@@ -52,6 +53,7 @@
     "babel-loader": "8.1.0",
     "babel-preset-vue": "2.0.2",
     "core-js": "3.10.1",
+    "css-loader": "^5.2.1",
     "eslint": "7.24.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-vue": "7.8.0",
@@ -66,7 +68,8 @@
     "stylelint-config-recess-order": "2.3.0",
     "stylelint-config-standard": "21.0.0",
     "vue-eslint-parser": "7.6.0",
-    "vue-jest": "3.0.7"
+    "vue-jest": "3.0.7",
+    "vue-loader": "^15.9.5"
   },
   "resolutions": {
     "react": "16.14.0",
