--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@storybook/cli": "6.2.7",
     "@storybook/vue": "6.2.7",
     "@vue/test-utils": "1.1.3",
+    "babel-core": "^6.26.3",
     "babel-eslint": "10.1.0",
     "babel-jest": "26.6.3",
     "babel-loader": "8.1.0",
