--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,6 @@
         "source.fixAll.eslint": true,
         "source.fixAll.stylelint": true
     },
-    "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
+    "json.format.enable": false,
 }
