--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "generate": "nuxt generate",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "storybook": "start-storybook -p 6006 --no-dll",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook --no-dll"
   },
   "dependencies": {
@@ -35,6 +35,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-private-methods": "^7.14.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.15.4",
     "@babel/preset-env": "7.15.4",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/dotenv": "1.4.1",
