--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,12 +1,16 @@
 {
-  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
+  "extends": [
+    "stylelint-config-standard",
+    "stylelint-config-recess-order",
+    "stylelint-config-recommended-vue"
+  ],
   "rules": {
-      "selector-pseudo-element-no-unknown": [
-        true,
-        {
-          "ignorePseudoElements": ["v-deep"]
-        }
-      ],
+    "selector-pseudo-element-no-unknown": [
+      true,
+      {
+        "ignorePseudoElements": ["v-deep"]
+      }
+    ],
     "color-no-invalid-hex": true,
     "color-hex-case": "lower",
     "selector-class-pattern": "^(?:(?:o|c|u|t|s|is|has|_|js|qa)-)?[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*(?:__[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:--[a-zA-Z0-9]+(?:-[a-zA-Z0-9]+)*)?(?:\\[.+\\])?$"
