--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-vue": "8.5.0",
     "firebase-tools": "10.4.2",
-    "jest": "26.6.3",
+    "jest": "^27.5.1",
     "postcss-html": "^1.3.0",
     "prettier": "2.6.0",
     "react-is": "17.0.2",
