--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dayjs": "1.11.0",
     "firebase": "9.6.9",
     "github-markdown-css": "5.1.0",
-    "highlight.js": "11.5.0",
+    "highlight.js": "^11.4.0",
     "marked": "^4.0.12",
     "normalize.css": "8.0.1",
     "nuxt": "2.15.8",
