update: sp版の処理を追加

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,22 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: "coverage/lcov.info"
 
+      - name: e2e
+        env:
+          BASE_URL: ${{ secrets.BASE_URL }}
+          MICRO_CMS: ${{ secrets.MICRO_CMS }}
+          ARTICLE_URL: ${{ secrets.ARTICLE_URL }}
+          TAG_URL: ${{ secrets.TAG_URL }}
+          CATEGORY_URL: ${{ secrets.CATEGORY_URL }}
+        run: yarn e2e
+
+      - name: Upload screenshots
+        uses: actions/upload-artifact@v3
+        if: failure()
+        with:
+          name: cypress-snapshots
+          path: cypress/snapshots
+
       # Storybookをgithub pagesにホスティング
       - name: build Storybook
         run: yarn build-storybook
