--- a/.github/workflows/sub.yml
+++ b/.github/workflows/sub.yml
@@ -11,14 +11,14 @@ env:
 
 jobs:
   build-test:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
       - name: setup node
         uses: actions/setup-node@v3
         with:
-          node-version: "12.x"
+          node-version: '18.x'
 
       - name: Cache dependencies
         uses: actions/cache@v3
@@ -37,7 +37,7 @@ jobs:
 
       - name: test
         env:
-          TZ: "Asia/Tokyo"
+          TZ: 'Asia/Tokyo'
         run: yarn test
 
       - name: e2e
@@ -78,7 +78,7 @@ jobs:
         with:
           webhook: ${{ secrets.DISCORD_WEBHOOK }}
           status: ${{ job.status }}
-          title: "develop"
-          description: "develop branch test"
+          title: 'develop'
+          description: 'develop branch test'
           nofail: false
           nodetail: false
