--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@nuxtjs/sitemap": "2.4.0",
     "dayjs": "1.11.7",
+    "express": "^4.18.2",
     "firebase": "9.6.11",
     "github-markdown-css": "5.1.0",
     "highlight.js": "^11.3.1",
@@ -58,7 +59,6 @@
     "babel-preset-vue": "2.0.2",
     "core-js": "3.21.1",
     "css-loader": "5.2.7",
-    "cypress": "9.5.4",
     "eslint": "8.11.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
