e2e周りの見直し

--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "format": "yarn prettier --write \"**/*.{js, vue}\"",
     "lint:check": "yarn lint-js & yarn lint-style",
     "lint:fix": "yarn lint-js:fix && yarn lint-style:fix && yarn format",
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt start",
+    "generate": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
     "test": "jest",
     "test:cov": "jest --coverage",
     "cy": "cypress run",
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@nuxtjs/sitemap": "2.4.0",
+    "cypress": "^13.2.0",
     "dayjs": "1.11.7",
     "express": "^4.18.2",
     "firebase": "9.6.11",
