test不具合の修正

--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
     "format": "yarn prettier --write \"**/*.{js, vue}\"",
     "lint:check": "yarn lint-js & yarn lint-style",
     "lint:fix": "yarn lint-js:fix && yarn lint-style:fix && yarn format",
-    "dev": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt",
-    "build": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt build",
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt start",
-    "generate": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
     "test": "jest",
     "test:cov": "jest --coverage",
     "cy": "cypress run",
     "cy:open": "cypress open",
     "e2e": "start-server-and-test dev http://localhost:3000 cy",
     "e2e:open": "start-server-and-test dev http://localhost:3000 cy:open",
-    "dev:sb": "start-storybook -p 6006",
-    "build:sb": "build-storybook --no-dll"
+    "dev": "export NODE_OPTIONS=--openssl-legacy-provider&& nuxt",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider&& nuxt build",
+    "start": "export NODE_OPTIONS=--openssl-legacy-provider&& nuxt start",
+    "generate": "export NODE_OPTIONS=--openssl-legacy-provider && nuxt generate",
+    "dev:sb": "export NODE_OPTIONS=--openssl-legacy-provider&& start-storybook -p 6006",
+    "build:sb": "export NODE_OPTIONS=--openssl-legacy-provider&& build-storybook --no-dll"
   },
   "dependencies": {
     "@nuxtjs/sitemap": "2.4.0",
@@ -45,7 +45,7 @@
     "@babel/plugin-proposal-class-properties": "7.16.7",
     "@babel/plugin-proposal-private-methods": "7.16.11",
     "@babel/plugin-proposal-private-property-in-object": "7.16.7",
-    "@babel/preset-env": "7.16.11",
+    "@babel/preexport-env": "7.16.11",
     "@nuxtjs/axios": "5.13.6",
     "@nuxtjs/dotenv": "1.4.1",
     "@storybook/addon-actions": "6.5.15",
@@ -57,7 +57,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "27.5.1",
     "babel-loader": "8.2.5",
-    "babel-preset-vue": "2.0.2",
+    "babel-preexport-vue": "2.0.2",
     "core-js": "3.21.1",
     "css-loader": "5.2.7",
     "eslint": "8.11.0",
