--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "eslint-plugin-vue": "8.5.0",
     "firebase-tools": "12.4.3",
     "jest": "^27.5.1",
+    "mockdate": "^3.0.5",
     "postcss-html": "^1.3.0",
     "prettier": "2.6.2",
     "react-is": "18.2.0",
