--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,8 @@
     {
       "files": ["pages/**/*.vue", "layouts/**/*.vue"],
       "rules": {
-        "vue/multi-word-component-names": "off"
+        "vue/multi-word-component-names": "off",
+        "vue/valid-attribute-name": "off"
       }
     }
   ]
